eshoponwebk8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshoponweb-deploy
  namespace: app 
spec:
  selector:
    matchLabels:
      app: eshoponweb
  replicas: 1
  template:
    metadata:
      labels:
        app: eshoponweb
    spec:
      containers:
      - name: eshoponweb
        image: tomcat
#dmytroslotvinskyy/eshoponweb:latest
      #  ports:
     #   - containerPort: 8888
         # port: 5000
       # - targetPort: 5106
      
---
kind: Service
apiVersion: v1
metadata:
  name: eshoponweb-svc
  namespace: app
spec:
  selector:
    app: eshoponweb
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 30000
  type: LoadBalancer
---
