k8s_local_files_test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-database-deployment
  namespace: apache
  labels:
    app: mssql-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-database
  template:
    metadata:
      labels:
        app: mssql-database
    spec:
      volumes:
        - name: local-pv1
          persistentVolumeClaim:
            claimName: local-pv-claim
      containers:
        - name: mssql-database
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: "/var/opt/mssql/data"
            name: local-pv1
---
apiVersion: v1
kind: Service
metadata:
  namespace: apache
  name: mssql-service
spec:
  type: NodePort
  selector:
    app: mssql-database
  ports:
    - port: 1433
      targetPort: 1433
      nodePort: 30200
---

#./k8s/stateful-set.yaml

# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: mssql-database
#   namespace: apache
# spec:
#   selector:
#     matchLabels:
#       app: mssql-database
#   serviceName: mssql-service
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: mssql-database
#     spec:
#       volumes:
#         - name: local-pv1
#           persistentVolumeClaim:
#             claimName: local-pv-claim
#       containers:
#       - name: sql-serverrr
#         image: mcr.microsoft.com/mssql/server:2019-latest
#         volumeMounts:
#         - name: local-pv1
#           mountPath: "/var/opt/mssql/data"
#         env:
#         - name: ACCEPT_EULA
#           value: "Y"
#         - name: MSSQL_PID
#           value: Express
#         - name: SA_PASSWORD
#           value: "M@sw9fes.kf"
