newk8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: apache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshopdeployment
  namespace: apache
  labels:
    app: eshopapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshopapp
  template:
    metadata:
      labels:
        app: eshopapp
    spec:
      containers:
        - name: eshopapp
          image: dkerlearn21/eshopwebmvc
          resources:
              requests:
                memory: "256Mi"
                cpu: "512m"
              limits:
                memory: "256Mi"
                cpu: "512m"
          ports:
            - containerPort: 80
---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: mssql-connection-configmap
#   namespace: apache
#   labels:
#     app:eshopapp
# data:
#   # db-connection-string: Server=tcp:mssql-paas.database.windows.net,1433;Initial Catalog=ProductsDB;Persist Security Info=False;User ID=houssem;Password=@Aa123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
#   CatalogConnection: Server=mssql-service;Integrated Security=false;User ID=sa;Password=M@sw9fes.kf;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;
#   IdentityConnection: Server=mssql-service;Integrated Security=false;User ID=sa;Password=M@sw9fes.kf;Initial Catalog=Microsoft.eShopOnWeb.Identity;


apiVersion: v1
kind: Service
metadata:
  name: eshopappservice
  namespace: apache
spec:
  type: NodePort
  selector:
    app: eshopapp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
---
